--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,13 @@
     </style>
     <link href="/css/bootstrap-responsive.css" rel="stylesheet">
 
+    <script type="text/javascript" src="/js/jquery.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/js/npm.js" type="text/javascript"></script>
+
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
