added GitHub and LinkedIn links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,18 @@
     </div>
 
+    <footer class="footer">
+      <div class="container">
+        <div>
+          <div class="col-xs-2">
+            {% include github.html %}
+          </div>
+          <div class="col-xs-2">
+            {% include linkedin.html %}
+          </div>
+        </div>
+      </div>
+    </footer>
+
   </body>
+
 </html>
