--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
 
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
-        <a class="brand" href="#">{{ site.name }}</a>
+        <a class="navbar-brand" href="#">{{ site.name }}</a>
       </div>
     </div>
 
